HybridQueryCollectContextSpec implemenation
Signed-off-by: vibrantvarun <jainvarun4996@gmail.com>